add request history
